cfg clips-executive: use pddl, sync facts with robot memory

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -52,6 +52,8 @@ clips-executive:
 
   # Use navgraph feature which adds facts for navgraph nodes.
   use_navgraph: true
+  use_pddl: true
+  sync_domain_facts: true
 
   specs:
     test:
