--- a/cfg/conf.d/robot-memory.yaml
+++ b/cfg/conf.d/robot-memory.yaml
@@ -36,10 +36,7 @@ plugins/robot-memory:
       replica-set-name: "syncedrobmem"
       db-path: "~/.robot-memory/dbs/distributed"
       replica-set-members:
-        - robotino-laptop-1:27021
-        - robotino-laptop-2:27021
-        - robotino-laptop-3:27021
-        - robotino-arbiter:27021
+        - localhost:27021
       replica-id: 1 #this should be the robot number, override it in host.yaml
       # initiate automatically
       initiate: true
@@ -62,10 +59,7 @@ plugins/mongodb/clients:
       mode: replica_set
       name: syncedrobmem
       hosts:
-        robotino-laptop-1: robotino-laptop-1:27021
-        robotino-laptop-2: robotino-laptop-2:27021
-        robotino-laptop-3: robotino-laptop-3:27021
-        robotino-arbiter: robotino-arbiter:27021
+        localhost: localhost:27021
     robotmemory-local:
       active: true
       mode: connection
