--- a/cfg/conf.d/pddl-robot-memory.yaml
+++ b/cfg/conf.d/pddl-robot-memory.yaml
@@ -6,14 +6,14 @@ doc-url: !url http://trac.fawkesrobotics.org/wiki/Plugins/pddl-robot-memory
 plugins/pddl-robot-memory:
 
   # Which collection contains the worldmodel
-  collection: "robmem1.blocks_world"
+  collection: "robmem.clipswm"
   # Where is the problem file to use as teplate (in src/agents) 
-  input-problem-description: blocks-world/problem-template.pddl
+  input-problem-description: clips-executive/visit-all/problem-template.pddl
   # Where to put the generated problem file (in src/agents) 
-  output-problem-description: blocks-world/generated-problem.pddl
+  output-problem-description: clips-executive/visit-all/problem.pddl
   
   # Interface used to start generation with message and show when its final
   interface-name: "pddl-gen"
   
   #do you want to generate the pddl when the plugin is initialized?
-  generate-on-init: true
+  generate-on-init: false
