--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -85,13 +85,13 @@ clips-executive:
       blackboard-preload: ["Position3DInterface"]
 
     rcll2017:
-      environment: rcll2017/environment.clp
+      communication: ["rcll2017/refbox-comm-init.clp", "rcll2017/refbox-worldmodel.clp"]
       domain: rcll2017/domain.clp
       goal-reasoner: rcll2017/goal-reasoner.clp
       goal-expander: rcll2017/fixed-sequence.clp
       action-selection: rcll2017/action-selection.clp
       #macro-expansion: visit-all/action-selection.clp
-      action-execution: ["skills-actions.clp" , "rcll2017/custom-actions.clp" ]
+      action-execution: ["skills-actions.clp" , "rcll2017/refbox-actions.clp" ]
       execution-monitoring: rcll2017/execution-monitoring.clp
       state-estimation: rcll2017/state-estimation-init.clp
 
