clips-exec/rcll: initialization is finished when we have a team color
We need to retract the initialization fact eventually. Having a team
color seems like a good indicator that the initialization has finished.

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -86,6 +86,7 @@ clips-executive:
       blackboard-preload: ["Position3DInterface"]
 
     rcll2017:
+      init: rcll2017/init.clp
       communication: ["rcll2017/refbox-comm-init.clp", "rcll2017/refbox-worldmodel.clp"]
       domain: rcll2017/domain.clp
       goal-reasoner: rcll2017/goal-reasoner.clp
