cfg clips-executive: use_tf loads tf feature

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -54,6 +54,7 @@ clips-executive:
   use_navgraph: true
   use_pddl: true
   use_protobuf: true
+  use_tf: true
   sync_domain_facts: true
 
   specs:
