cfg clips-exec/rcll: Update Rcll parameters
domain specific conf and parameters are now found under the path:
clips-executive/specs/?spec-name/parameters

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -101,7 +101,7 @@ clips-executive:
         visit: ppgoto{place=?(to)S}
       blackboard-preload: ["Position3DInterface"]
 
-      wm-config:
+      parameters:
         rcll:
           peer-address: 127.0.0.1
           peer-recv-port: 4444
