--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -72,7 +72,7 @@ webtools-bridge:
 clips-executive:
   specs:
     rcll2017:
-      wm-config:
+      parameters:
         rcll:
           team-name: Carologistics
           robot-name: R-2
