--- a/cfg/gazsim-configurations/default/host_robotino_1.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_1.yaml
@@ -73,7 +73,7 @@ webtools-bridge:
 clips-executive:
   specs:
     rcll2017:
-      wm-config:
+      parameters:
         rcll:
           team-name: Carologistics
           robot-name: R-1
