--- a/cfg/gazsim-configurations/default/host_robotino_3.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_3.yaml
@@ -71,16 +71,18 @@ webtools-bridge:
 
 
 clips-executive:
-  wm-config:
-    rcll:
-      team-name: Carologistics
-      robot-name: R-3
-      robot-number: 3
+  specs:
+    rcll2017:
+      parameters:
+        rcll:
+          team-name: Carologistics
+          robot-name: R-3
+          robot-number: 3
 
-      peer-address: 127.0.0.1
-      peer-recv-port: 4413
-      peer-send-port: 4423
-      cyan-recv-port: 4453
-      magenta-recv-port: 4463
-      cyan-send-port: 4473
-      magenta-send-port: 4483
+          peer-address: 127.0.0.1
+          peer-recv-port: 4413
+          peer-send-port: 4423
+          cyan-recv-port: 4453
+          magenta-recv-port: 4463
+          cyan-send-port: 4473
+          magenta-send-port: 4483
