clips-executive/rcll-smt: Change goal-expander from fix-sequence.clp to smt-planner.clp

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -91,7 +91,7 @@ clips-executive:
       communication: ["rcll2017/refbox-comm-init.clp", "rcll2017/refbox-worldmodel.clp"]
       domain: rcll2017/domain.clp
       goal-reasoner: rcll2017/goal-reasoner.clp
-      goal-expander: rcll2017/fixed-sequence.clp
+      goal-expander: rcll2017/smt-planner.clp
       action-selection: rcll2017/action-selection.clp
       #macro-expansion: visit-all/action-selection.clp
       action-execution: [
