--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -55,7 +55,7 @@ clips-executive:
   use_pddl: true
   use_protobuf: true
   use_tf: true
-  # use_smt: true
+  use_smt: true
   sync_domain_facts: true
 
   specs:
