conveyor_pose: add model_file to config
this is the only required config setting, all others are optional with
defaults taken from the PCL correspondence grouping example code.

--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -11,6 +11,10 @@ conveyor_pose:
   # the point cloud that is used to detect the belt
   cloud_in: "/camera/depth/points"
 
+  # Path to the PCD file containing the conveyor model.
+  # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
+  model_file: "conveyor_model.pcd"
+
   if:
     # the prefix used for all interfaces
     prefix: conveyor_pose
