plugins/conveyor_pose: document cg settings
all settings for the correspondence grouping have defaults, so they are
just documented in the config file.

--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -48,6 +48,19 @@ conveyor_pose:
   switch_default: false
   use_visualisation: false
 
+  # Config for the PCL correspondence grouping algorithm
+  # All settings are optional and use the defaults below
+  cg:
+    #model_sampling_radius: 0.01
+    #scene_sampling_radius: 0.03
+    #reference_frame_radius: 0.015
+    #descriptor_radius: 0.02
+    #cluster_size: 0.01
+    #clustering_threshold: 5
+
+    # Use pcl::Hough3DGrouping instead of pcl::GeometricConsistencyGrouping
+    #use_hough: false
+
 
   # the maximum allowed distance that the vis_hist is not resetet
   vis_hist:
