--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -11,6 +11,14 @@ conveyor_pose:
   # the point cloud that is used to detect the belt
   cloud_in: "/camera/depth/points"
 
+  # Write trimmed point cloud into model_file (see options below for file name and
+  # trimming parameters)
+  # This completely changes the mode of operation to just record pointclouds,
+  # no recognition is done when this is enabled.
+  # If the target file already exists, an increasing integer is appended until
+  # a file is found that doesn't exist, yet.
+  record_model: true
+
   # Path to the PCD file containing the conveyor model.
   # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
   model_file: "conveyor_model.pcd"
