--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -17,7 +17,12 @@ conveyor_pose:
   # no recognition is done when this is enabled.
   # If the target file already exists, an increasing integer is appended until
   # a file is found that doesn't exist, yet.
-  record_model: true
+  record_model: false
+
+  # When recording a model (see above), transform the recorded model into this frame before
+  # saving it. The robot should be positioned so that this frame is at the desired origin of
+  # the conveyor (align the conveyor cloud & the TF in rviz)
+  model_origin_frame: "gripper_fingers"
 
   # Path to the PCD file containing the conveyor model.
   # Relative paths (i.e. not starting with "/") are looked up in CONFDIR (e.g. fawkes-robotino/cfg)
