cfg laser-filter: add copy filter to 360to360 filters
Every filter configuration needs to have at least one specified filter.
Add the copy filter to the 360to360 filter configurations.

--- a/cfg/conf.d/laser-filter.yaml
+++ b/cfg/conf.d/laser-filter.yaml
@@ -24,6 +24,9 @@ plugins/laser-filter:
     active: false
     in/sick-tim55x: Laser1080Interface::Laser front
     out/filtered: Laser360Interface::Laser front 360
+    filters:
+      1-copy:
+        type: copy
 
   back-downsample:
     active: false
@@ -38,6 +41,9 @@ plugins/laser-filter:
     active: true
     in/sick-tim55x: Laser1080Interface::Laser back
     out/filtered: Laser360Interface::Laser back 360
+    filters:
+      1-copy:
+        type: copy
 
   filter-front-360:
     active: true
