meta-plugins: add m-robot-memory and velocity_share to gazsim-ros

--- a/cfg/conf.d/meta_plugins_gazebo.yaml
+++ b/cfg/conf.d/meta_plugins_gazebo.yaml
@@ -32,6 +32,8 @@ fawkes/meta_plugins:
     - ros-navigator
     - gazsim-vis-localization
     - skiller
+    - m-robot-memory
+    - velocity_share
   gazsim-meta-robotino-no-ros:
     - gazsim-meta-robotino
     - amcl
