--- a/cfg/gazsim-configurations/default/host_robotino_1.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_1.yaml
@@ -69,20 +69,15 @@ webtools-bridge:
   rosbridge-port: 9090
   rosbridge-uri: "ws://localhost:9090"
 
+clips-executive/specs/rcll2017/parameters/rcll:
+  team-name: Carologistics
+  robot-name: R-1
+  robot-number: 1
 
-clips-executive:
-  specs:
-    rcll2017:
-      parameters:
-        rcll:
-          team-name: Carologistics
-          robot-name: R-1
-          robot-number: 1
-
-          peer-address: 127.0.0.1
-          peer-recv-port: 4411
-          peer-send-port: 4421
-          cyan-recv-port: 4451
-          magenta-recv-port: 4461
-          cyan-send-port: 4471
-          magenta-send-port: 4481
+  peer-address: 127.0.0.1
+  peer-recv-port: 4411
+  peer-send-port: 4421
+  cyan-recv-port: 4451
+  magenta-recv-port: 4461
+  cyan-send-port: 4471
+  magenta-send-port: 4481
