--- a/cfg/gazsim-configurations/default/host_robotino_2.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_2.yaml
@@ -69,19 +69,15 @@ webtools-bridge:
   rosbridge-port: 8080
   rosbridge-uri: "ws://localhost:8080"
 
-clips-executive:
-  specs:
-    rcll2017:
-      parameters:
-        rcll:
-          team-name: Carologistics
-          robot-name: R-2
-          robot-number: 2
+clips-executive/specs/rcll2017/parameters/rcll:
+  team-name: Carologistics
+  robot-name: R-2
+  robot-number: 2
 
-          peer-address: 127.0.0.1
-          peer-recv-port: 4412
-          peer-send-port: 4422
-          cyan-recv-port: 4452
-          magenta-recv-port: 4462
-          cyan-send-port: 4472
-          magenta-send-port: 4482
+  peer-address: 127.0.0.1
+  peer-recv-port: 4412
+  peer-send-port: 4422
+  cyan-recv-port: 4452
+  magenta-recv-port: 4462
+  cyan-send-port: 4472
+  magenta-send-port: 4482
