--- a/cfg/gazsim-configurations/default/host_robotino_3.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_3.yaml
@@ -69,20 +69,15 @@ webtools-bridge:
   rosbridge-port: 7070
   rosbridge-uri: "ws://localhost:7070"
 
+clips-executive/specs/rcll2017/parameters/rcll:
+  team-name: Carologistics
+  robot-name: R-3
+  robot-number: 3
 
-clips-executive:
-  specs:
-    rcll2017:
-      parameters:
-        rcll:
-          team-name: Carologistics
-          robot-name: R-3
-          robot-number: 3
-
-          peer-address: 127.0.0.1
-          peer-recv-port: 4413
-          peer-send-port: 4423
-          cyan-recv-port: 4453
-          magenta-recv-port: 4463
-          cyan-send-port: 4473
-          magenta-send-port: 4483
+  peer-address: 127.0.0.1
+  peer-recv-port: 4413
+  peer-send-port: 4423
+  cyan-recv-port: 4453
+  magenta-recv-port: 4463
+  cyan-send-port: 4473
+  magenta-send-port: 4483
