--- a/cfg/gazsim-configurations/default/host_robotino_5.yaml
+++ b/cfg/gazsim-configurations/default/host_robotino_5.yaml
@@ -62,3 +62,16 @@ plugins/tag_vision:
 
 plugins/robot-memory:
   database: robmem5
+
+clips-executive/specs/rcll2017/parameters/rcll:
+  team-name: Carologistics
+  robot-name: R-5
+  robot-number: 5
+
+  peer-address: 127.0.0.1
+  peer-recv-port: 4415
+  peer-send-port: 4425
+  cyan-recv-port: 4455
+  magenta-recv-port: 4465
+  cyan-send-port: 4475
+  magenta-send-port: 4485
