conveyor-pose: Updated config prefix

--- a/cfg/conf.d/conveyor_pose.yaml
+++ b/cfg/conf.d/conveyor_pose.yaml
@@ -40,28 +40,28 @@ plugins/conveyor_pose:
   record_station: "C-CS1-I"
 
   model_files:
-          M-BS-I: "default"
-          M-BS-O: "default"
-          C-BS-I: "default"
-          C-BS-O: "default"
-          M-CS1-I: "default"
-          M-CS1-O: "default"
-          C-CS1-I: "default"
-          C-CS1-O: "default"
-          M-CS2-I: "default"
-          M-CS2-O: "default"
-          C-CS2-I: "default"
-          C-CS2-O: "default"
-          M-RS1-I: "default"
-          M-RS1-O: "default"
-          C-RS1-I: "default"
-          C-RS1-O: "default"
-          M-RS2-I: "default"
-          M-RS2-O: "default"
-          C-RS2-I: "default"
-          C-RS2-O: "default"
-          M-DS-I: "default"
-          C-DS-O: "default"
+    M-BS-I: "default"
+    M-BS-O: "default"
+    C-BS-I: "default"
+    C-BS-O: "default"
+    M-CS1-I: "default"
+    M-CS1-O: "default"
+    C-CS1-I: "default"
+    C-CS1-O: "default"
+    M-CS2-I: "default"
+    M-CS2-O: "default"
+    C-CS2-I: "default"
+    C-CS2-O: "default"
+    M-RS1-I: "default"
+    M-RS1-O: "default"
+    C-RS1-I: "default"
+    C-RS1-O: "default"
+    M-RS2-I: "default"
+    M-RS2-O: "default"
+    C-RS2-I: "default"
+    C-RS2-O: "default"
+    M-DS-I: "default"
+    C-DS-I: "default"
 
   if:
     # the prefix used for all interfaces
