--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -32,7 +32,7 @@ fawkes/meta_plugins:
   #
   # Robotino base meta plugin
   #
-  m-base-bare: imu,robotino,webview,static-transforms,motor-led
+  m-base-bare: imu,robotino,static-transforms,motor-led
   m-base-joy: m-base-bare,joystick,joystick-teleop
   m-base-joy-safe: m-base-bare,laser,laser-filter,joystick,joystick-teleop
   m-base-gripper: arduino,dynamixel,ax12_gripper
