--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -115,13 +115,11 @@ clips-executive:
 
       parameters:
         rcll:
-          peer-address: 127.0.0.1
-          peer-recv-port: 4444
-          peer-send-port: 4445
-          cyan-recv-port: 4441
-          magenta-recv-port: 4442
-          cyan-send-port: 4446
-          magenta-send-port: 4447
+        #real-world-setup:
+          peer-address: 172.26.255.255
+          peer-port: 4444
+          cyan-port: 4441
+          magenta-port: 4442
 
           team-name: Carologistics
           crypto-key: randomkey
