config: replica set config fix
The fix is currently disabled. Enable after testing on robot host. But
from the logs I got this seems to be the cause of the failure to
properly initialize the replica set.

We use a bootstrap MongoDB instance to determine the RS leader. So far,
all hosts have been using their own local instance and thus every
instance became a leader. Add a global arbiter database instance
that allows to determine bootstrap leadership globally.

Afterwards, leader election and failover of the replica take over. We
need the extra instance only to determine who performs initial RS
configuration.

--- a/cfg/conf.d/mongodb.yaml
+++ b/cfg/conf.d/mongodb.yaml
@@ -11,6 +11,11 @@ plugins/mongodb:
       mode: connection
       hostport: localhost:27017
 
+    arbiter:
+      enabled: false
+      mode: connection
+      hostport: arbiter:27017
+
     robot-memory-local-direct:
       enabled: true
       mode: connection
@@ -67,6 +72,7 @@ plugins/mongodb:
   replica-sets:
     bootstrap-mongodb:
       client: default
+      #client: arbiter
       database: replica_set_leaders
       collection: replica_set_mgmt
 
