--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -99,7 +99,7 @@ clips-executive:
         "rcll2017/refbox-actions.clp" ]
       execution-monitoring: rcll2017/execution-monitoring.clp
       state-estimation: rcll2017/state-estimation-init.clp
-      worldmodel: rcll2017/init-worldmodel.clp
+      worldmodel: ["rcll2017/init-worldmodel.clp" , "rcll2017/game-worldmodel.clp"]
 
       action-mapping:
         enter-field: drive_into_field{team=?(team-color)S}
