--- a/src/plugins/conveyor_pose/Makefile
+++ b/src/plugins/conveyor_pose/Makefile
@@ -28,10 +28,12 @@ HAVE_BULLET_VERSION = $(if $(shell $(PKGCONFIG) --atleast-version=2.82 'bullet';
 
 REQUIRED_PCL_LIBS = filters kdtree recognition
 
+PRESUBDIRS = interfaces
+
 #The necessary libraries your plugin needs.
 LIBS_conveyor_pose = m fawkescore fawkesutils fawkesaspects fawkesbaseapp \
                      fawkestf fawkesblackboard fawkesinterface fawkespcl_utils fawkesrosaspect \
-                     SwitchInterface Position3DInterface LaserLineInterface
+                     SwitchInterface ConveyorPoseInterface LaserLineInterface
 #binaries that are needed for the given plugin (all your cpp-files, but with an o-ending :-) ).
 OBJS_conveyor_pose = conveyor_pose_plugin.o conveyor_pose_thread.o correspondence_grouping_thread.o
 
