--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -10,7 +10,7 @@ fawkes/meta_plugins:
   m-fv: fvbase,fvfountain
   m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
   m-clips: clips,clips-motor-switch,clips-protobuf,clips-rest-api,clips-navgraph,clips-tf
-  m-clips-agent: m-clips,m-fv-vision,clips-agent,webtools-bridge
+  m-clips-agent: m-clips,m-fv-vision,clips-agent
   m-clips-executive: m-clips,m-fv-vision,clips-executive,clips-executive-rest-api
   m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl,skiller-rest-api
   m-robot-memory: mongodb,robot-memory
