--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -11,9 +11,9 @@ fawkes/meta_plugins:
   m-fv-vision: m-bare,m-fv,tag_vision,fvretriever
   m-clips: clips,clips-motor-switch,clips-protobuf,clips-rest-api,clips-navgraph,clips-tf
   m-clips-agent: m-clips,m-fv-vision,clips-agent
-  m-clips-executive: m-clips,m-fv-vision,clips-executive,clips-executive-rest-api
-  m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl,skiller-rest-api
   m-robot-memory: mongodb,robot-memory
+  m-clips-executive: m-clips,m-fv-vision,clips-pddl-parser,m-robot-memory,clips-executive,clips-executive-rest-api
+  m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl,skiller-rest-api
   m-full: m-skiller,m-clips-agent
 
   #
