cfg/meta_plugins: load robot-memory plugins for m-clips-executive

--- a/cfg/conf.d/meta_plugins_laptop.yaml
+++ b/cfg/conf.d/meta_plugins_laptop.yaml
@@ -28,6 +28,8 @@ fawkes/meta_plugins:
   m-clips-executive:
     - m-clips
     - m-fv-vision
+    - clips-pddl-parser
+    - m-robot-memory
     - clips-executive
     - clips-executive-rest-api
   m-skiller:
