--- a/cfg/conf.d/meta_plugins.yaml
+++ b/cfg/conf.d/meta_plugins.yaml
@@ -14,7 +14,7 @@ fawkes/meta_plugins:
   m-robot-memory: mongodb,robot-memory
   m-clips-executive: m-clips,m-fv-vision,clips-pddl-parser,m-robot-memory,clips-executive,clips-executive-rest-api
   m-skiller: ros,m-fv-vision,navgraph,navgraph-generator,navgraph-generator-mps,skiller,realsense,conveyor-pose,ros-pcl,skiller-rest-api
-  m-full: m-skiller,m-clips-agent
+  m-full: m-skiller,m-clips-executive
 
   #
   # Gazebo stuff
