--- a/cfg/conf.d/static_transforms.yaml
+++ b/cfg/conf.d/static_transforms.yaml
@@ -85,13 +85,6 @@ plugins/static-transforms:
       trans_y: 0.0
       trans_z: 0.1
 
-    fingers:
-      frame: !frame gripper
-      child_frame: !frame gripper_fingers
-      trans_x: 0.11
-      trans_y: 0.005
-      trans_z: -0.02
-
     cam_conveyor:
       frame: !frame gripper
       child_frame: !frame cam_conveyor
@@ -102,3 +95,9 @@ plugins/static-transforms:
       rot_pitch: 0
       rot_roll: -1.57
 
+    fingers:
+      frame: !frame cam_conveyor
+      child_frame: !frame gripper_fingers
+      trans_z: 0.118
+      trans_x: -0.025
+      trans_y: -0.015
