cfg cx: enable motor switch

--- a/cfg/conf.d/clips-executive.yaml
+++ b/cfg/conf.d/clips-executive.yaml
@@ -55,6 +55,7 @@ clips-executive:
   use_pddl: false
   use_protobuf: true
   use_tf: true
+  use_motor_switch: true
   sync_domain_facts: false
 
   specs:
